--- a/entrance.css
+++ b/entrance.css
@@ -14,7 +14,7 @@ a:visited {
   text-decoration: none;
 }
 a:hover {
-  color : rgb(115, 115, 115);
+  color : black;
   text-decoration: none;
 }
 a:active {
