--- a/second page.css
+++ b/second page.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: sig;
+    src: url("Signifier-Light.otf");
+}
+
+html{font-family: sig;}
+
 .parent{
     width: 90%;
     margin: 10px auto;
